[package]
name = "AntiNuke-Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"

[dependencies.serenity]
default-features = true
version = "0.12"
